--- a/learning/flask-sqlalchemy/first-try/app/templates/base.html
+++ b/learning/flask-sqlalchemy/first-try/app/templates/base.html
@@ -1,13 +1,12 @@
-<html>
+<html xmlns="http://www.w3.org/1999/html">
     <head>
-      {% if title %}
-      <title>{{ title }} - Microblog</title>
-      {% else %}
-      <title>Welcome to Microblog</title>
-      {% endif %}
+      <title>Tieto Library</title>
     </head>
     <body>
-        <div>Microblog: <a href="/index">Home</a></div>
+    <a href="/index">Home</a>
+    <a href="/all-books">All books</a>
+    <a href="/search">Search</a>
+
         <hr>
         {% block content %}{% endblock %}
     </body>
