--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    {% block head %}
-      <title>{% block title %}{% endblock %} - My Webpage</title>
-    {% endblock %}
+      <title>{% block title %}{% endblock %}</title>
   </head>
   <body>
+    <div> <a href="/">Home</a> <a href="/all-books">All books</a> <a href="/search">Search</a> </div>
+    <hr>
     <div id="content">{% block content %}{% endblock %}</div>
   </body>
 </html>
