--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
       <title>{% block title %}{% endblock %}</title>
   </head>
   <body>
-    <div> <a href="/">Home</a> <a href="/all-books">All books</a> <a href="/search">Search</a> </div>
+    <div> <a href="/">Home</a> <a href="/all-books">All books</a> <a href="/search">Search</a> <a href="/login">log in</a> </div>
     <hr>
     <div id="content">{% block content %}{% endblock %}</div>
   </body>
